Fix filters reset button showing when price range was set back to range limits Fix price limit not reseting after changing only one of two price ranges Fix price limit not reseting after adding new filters Fix additional images in product component not showing horizontally at lower resolutions Fix navbar collapsing after clicking category, searching or changing route

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,136 +1,6 @@
-.container.options {
-  margin-top: 86px;
-  padding: 10px;
-  background-color: white;
-}
-
-.container {
-  cursor: auto;
-  user-select: auto;
-}
-
-.option {
-  width: 100%;
-  margin-bottom: 10px;
-  margin-top: 10px;
-  height: 50px;
-}
-
-.smallSpinner {
-  width: 20px !important;
-  height: 20px !important;
-}
-
-.left {
-  text-align: left;
-}
-
-.pointer {
-  cursor: pointer;
-}
-
-.align-left {
-  text-align: left;
-}
-
-.bordered {
-  border: 1px solid gray;
-  border-radius: 0.25rem !important;
-  margin: 5px;
-}
-
-.margin-5 {
-  margin: 5px;
-}
-
-.image-thumbnail {
-  width: 100px;
-  margin-bottom: 10px;
-  cursor: pointer;
-}
-
-.main-image {
-  width: 300px;
-  margin: auto;
-}
-
-.price-tag {
-  margin-top: 10px;
-  font-size: 2rem;
-}
-
-.product-tree {
-  text-align: left;
-}
-
-.product-name {
-  text-align: left;
-}
-
-.product-id {
-  text-align: left;
-  margin-bottom: 10px;
-}
-
-.product-divider {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.clear-link {
-  color: black;
-  text-decoration: none;
-}
-
-.imageLink:hover {
-  color: rgba(0, 123, 255, 1) 0%;
-  text-decoration: none;
-}
-
-.clear-link:hover {
-  color: rgba(0, 123, 255, 1) 0%;
-  text-decoration: none;
-}
-
-.imageDescription:hover {
-  color: rgba(0, 123, 255, 1) 0%;
-}
-
-.col-thumbnail {
-  max-width: 110px;
-  margin: auto;
-}
-
-.col-left {
-  text-align: right;
-}
-
-.col-right {
-  text-align: left;
-}
-
-.m-bot-10 {
-  margin-bottom: 10px;
-}
-
-.m-top-10 {
-  margin-top: 10px;
-}
-
-.container input {
-  position: relative;
-  opacity: 1;
-  cursor: auto;
-  height: auto;
-  width: 100%;
-}
-
-.m-left-10 {
-  margin-left: 10px;
-}
-
-.red {
-  color: red;
+.max-size {
+  max-width: auto;
+  max-height: 340px;
 }
 
 .backToTop {
@@ -142,6 +12,28 @@
   cursor: pointer;
 }
 
-.navbar-padding {
-  margin-top: 64px;
+.image {
+  cursor: pointer;
+}
+.img-fluid {
+  max-width: 50%;
+}
+
+@media (max-width: 1088px) {
+  .image {
+    max-width: 25%;
+    max-height: auto;
+    margin-right: 10px;
+    cursor: pointer;
+  }
+  .subimage-container {
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    display: inline;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .img-fluid {
+    max-width: 100%;
+  }
 }
